apps/mobile/css/pages/_mobile-network.scss
.tab--mobile-network {
  padding: 0 !important;
  min-height: 100vh;

  .search-view-table {
    .q-table td {
      font-size: 0.75rem;
    }

    &.regular-rows {
      .q-table thead {
        tr {
          height: 2rem !important;
        }
        th {
          font-size: 0.675rem !important;
          &:not(:first-of-type):not(:last-of-type) {
            padding: 0 0.5rem;
          }
        }
      }
      .q-table tbody.q-virtual-scroll__content td {
      }
    }

    th {
      &:last-of-type {
        text-align: right;
      }
    }
    td {
      &:last-of-type {
        text-align: right;
      }
    }

    .attribute--producer-status {
      height: 1rem;
      width: 14px;
      position: relative;

      div {
        span {
          top: 4px;
          position: absolute;
          height: 14px !important;
          width: 14px !important;
        }
      }
    }

    .attribute-wrapper--vhp-balance {
      margin-top: 2px;
      height: 1rem;
      font-size: 0.75rem;
      opacity: 0.5;
    }

    .attribute--blocks-produced {
      font-size: 0.75rem;
    }
  }

  .stats-card {
    .stat-title {
      padding-bottom: 0.25rem !important;
      color: rgba(255, 255, 255, 0.8) !important;
      font-weight: 400;
    }

    .stat-content {
      font-size: 1.5rem !important;
    }

    .stat-footer {
      opacity: 0.7 !important;
      padding-top: 0.25rem !important;
    }
  }
}

.body--dark {
  .page--mobile-network {
    .search-view-table {
      .attribute--total-rewards {
        color: #ffffff !important;
      }

      .attribute--blocks-produced {
        color: #666666 !important;
      }

      .attribute--producer-index {
        color: #ffffff;
      }

      .attribute--total-rewards {
        color: #ffffff;
      }
    }
  }
}

